...

        <action
            android:id="@+id/to_genericFeedFragment"
            app:destination="@id/genericFeedFragment" />
        <action
            android:id="@+id/to_prepareSingHostFragment"
            app:destination="@id/prepareSingHostFragment" />
        <action
            android:id="@+id/to_lessonFragment"
            app:destination="@id/lessonFragment" />
        <action
            android:id="@+id/to_learnFragment"
            app:destination="@id/learnFragment" />
...
        <deepLink
            android:id="@+id/deepLinkPrepareSingHostFragment"
            app:uri="https://www.singshala.com/app/songs/{singMode}" />

        <action
            android:id="@+id/to_coverResultFragment"
            app:destination="@id/coverResultFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right" />
        <action
            android:id="@+id/to_practiceResultFrag"
...
